# dcs-simulation-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yml  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  USAGE.md  USER_GUIDE.md  character-release-policy.yml  compose.yaml  compose.yml  custom-run.yaml  demo-run.yaml  docker-compose.yml  fly.toml  mkdocs.yml  pyproject.toml  readme.md  requirements.md  run_config.example.yml
.devcontainer/: .dockerignore  dev.Dockerfile  dev.compose.yml  devcontainer-lock.json  devcontainer.json  stop-mongo.bash  zshrc
.github/workflows/: ci.yml  deploy-demo-api.yml  deploy-demo-widget.yml  deploy-experiment.yml  deploy-widget.yml  docs.yml
analysis/: DCS-SE Character Development Study.docx  DCS-SE Evaluating Understanding of Diverse Cognitive Systems.docx  DCS-SE Simulation Quality Study.docx  DCS-SE Usability Study.docx  README.md  __init__.py  assignment-protocol-investigation.md  assignment-protocol-v2.md  character-assignment-filtering-inventory.md  helpers.py  yaml-comments.md
analysis/auto/: __init__.py  __main__.py  constants.py  publish.py
analysis/baseline-evaluations/: README.md  performance-eval-learning-ai.yaml  performance-eval-learning-human.yaml  performance-eval-static-ai.yaml  performance-eval-static-human.yaml
analysis/character-coverage/: character-clustering-nlp.ipynb  character-coverage-analysis.ipynb
analysis/character-development/: Pairwise Divergence Calculator.ipynb  README.md  eval-one-character.yaml  helpers.py
analysis/common/: __init__.py  loader.py
analysis/manual/: HSN Divergence Calculator.ipynb  Usability Report.template.ipynb
analysis/quality/: README.md
analysis/simulation-quality/: 2 - Character Cluster Coverage Analysis.ipynb  3 - Character Role-play Quality Analysis.ipynb  README.md  simulation-quality-analysis.ipynb
analysis/usability/: README.md  System Performance Analysis.ipynb  Thematic Player Feedback Analysis.ipynb  __init__.py  helpers.py  run-gui.yaml  usability-ca.yaml  usability-component-a.yaml
analysis_notebooks/: character-coverage-analysis.ipynb  character-quality-analysis.ipynb
analysis_notebooks/character-quality-analysis/: character-qa.ipynb
analysis_notebooks/core-character-coverage-analysis/: eval-core-chars.ipynb
analysis_notebooks/data/: dimensions.json
core/: pyproject.toml
core/dcs_simulation_engine/api/: __init__.py  app.py  requests.py  responses.py  session.py
core/dcs_simulation_engine/api/dal/: base.py  postgress.py
core/dcs_simulation_engine/api/routers/: users.py
core/dcs_simulation_engine/cli/: app.py  tui.py
core/dcs_simulation_engine/game/: game.py  llm.py  prompt.py
database_seeds/: characters.json
database_seeds/dev/: character_dimensions.json  character_evaluations.json  characters.json  hsn-abilities.json  hsn_assumptions.json  pii.json  players.json
database_seeds/prod/: characters.json  release_manifest.json
db/: alembic.ini  pyproject.toml
db/dcs_db/: __init__.py  engine.py  types.py
db/dcs_db/migrations/: env.py
db/dcs_db/migrations/versions/: a1b2c3d4e5f6_add_api_key_plaintext_to_auth.py  f68d8965d452_initial_schema.py
db/dcs_db/models/: __init__.py  auth.py  character.py  feedback.py  game.py  message.py  model.py  pii.py  session.py  user.py
dcs_simulation_engine/: client.py  errors.py
dcs_simulation_engine/api/: __init__.py  app.py  auth.py  client.py  deps.py  infer_intent_evaluation.py  models.py  registry.py
dcs_simulation_engine/cli/: app.py  bootstrap.py  common.py  config.py  run_spec.py
dcs_simulation_engine/core/: constants.py  engine_run_manager.py  experiment_config.py  experiment_manager.py  forms.py  game.py  game_config.py  run_config.py  run_manager.py  session_event_recorder.py  session_manager.py
dcs_simulation_engine/dal/: __init__.py  base.py
dcs_simulation_engine/deployments/: __init__.py
dcs_simulation_engine/games/: __init__.py  ai_client.py  const.py  explore.py  foresight.py  goal_horizon.py  infer_intent.py  markdown_helpers.py  prompts.py  teamwork.py
dcs_simulation_engine/helpers/: __init__.py  cli_helpers.py  database_helpers.py  deploy_helpers.py  deployment_helpers.py  docker_helpers.py  experiment_helpers.py  game_helpers.py  logging_helpers.py  run_helpers.py  validation_helpers.py
dcs_simulation_engine/hitl/: export.py  (+4 more)
dcs_utils/: README.md
docker/: Caddyfile  README.md  api.dockerfile  mongo.fly.dockerfile  ui.dockerfile  ui.fly.dockerfile
docs/: architecture_overview.md  characters.md  codebase_reference.md  dcs_se_reference.md  dcs_utils_reference.md  design.md  design_overview.md  examples.md  faq.md  feasibility_assessment.md  feasibility_notes.md  games.md  getting_started.md  index.md  oe_primer.md  studies_overview.md  validators.md
evaluations/: .README.md  README.md
experiments/: usability-ca.yaml  usability-ca.yml  usability.yml
games/: explore.yaml  explore.yml  foresight.yaml  goal-horizon.yaml  goal-horizon.yml  infer-intent.yaml  infer-intent.yml  teamwork.yaml  teamwork.yml  turing-test.yml
notebooks/: Character Coverage (Cluster).ipynb  HSN Divergence Calculator.ipynb  README.md  __init__.py
scripts/: entrypoint.py  load_test_and_report.py  run_api.py  run_cli.py  run_widget.py
tests/: conftest.py  helpers.py
tools/: analyze_load_test_results.py
ui/: README.md  biome.json  diff  index.html  orval.config.ts  package.json  pyproject.toml  vite.config.ts
ui/dcs_ui/: app.py
ui/src/: index.css  main.tsx
ui/src/api/: http.ts
ui/src/components/: chat-message.tsx  fatal-error-overlay.tsx  theme-toggle.tsx
ui/src/components/ui/: alert.tsx  button.tsx  label.tsx  select.tsx
ui/src/hooks/: use-session-websocket.ts  use-theme.ts
ui/src/lib/: api-errors.ts  api-url.ts  auth.ts  orval-response.ts  server-config.ts  theme.ts  ws-url.ts
ui/src/routes/: __root.tsx  index.tsx  login.tsx  routeTree.ts  run.tsx  signup.tsx  terms.tsx
ui/src/routes/experiments/: $experimentName.tsx
ui/src/routes/games/: $gameName.tsx  index.tsx
ui/src/routes/play/: $sessionId.tsx
(+437 files in other folders)
