# https://peps.python.org/pep-0621/

[build-system]
build-backend = "setuptools.build_meta"
# https://peps.python.org/pep-0518/
requires = ["setuptools>=61"]

[project]
authors = [{ email = "dcs@psych.gatech.edu", name = "dcs" }]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
# Declare any runtime pip dependencies (such as numpy)
# Do NOT put test dependencies (such as pytest) here.
# Test dependencies go in the [project.optional-dependencies] section.
# ! NOTE: To change a dependency to a local version, use the following syntax:
# "my-package @ git+file:///path/to/your/package"
dependencies = [
  "bcrypt (>=4.0.0,<5.0.0)",
  "dotenv (>=0.9.9,<0.10.0)",
  "fastapi (>=0.118.0,<1.0.0)",
  "httpx (>=0.28.1,<0.29.0)",
  "jinja2 (>=3.0,<4.0)",
  "loguru (>=0.7.3,<0.8.0)",
  "openai (>=1.99.9,<2.0.0)",
  "packaging>=26.0",
  "pydantic (>=2.11.9,<3.0.0)",
  "pymongo (>=4.15.3,<5.0.0)",
  "pyyaml (>=6.0.2,<7.0.0)",
  "rich (>=14.1.0,<15.0.0)",
  "typer>=0.24.1",
  "uvicorn[standard] (>=0.37.0,<0.38.0)",
  "uvloop (>=0.22.1,<0.23.0)",
  "websockets (>=16.0,<17.0)",
]

description = "A textual environment for simulating diverse cognitive systems."
license = "MIT"
license-files = ["LICENSE"]

# The name of the python package. This should be the same as the modules code directory
name = "dcs-simulation-engine"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

# Installs all testing dependencies needed when pytest runs. Do NOT put
# runtime dependencies here. These libraries will not be included when
# the package "deploys".
[project.optional-dependencies]
analysis = [
  "ipykernel>=6.31.0",
  "itables>=2.7.0",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.8",
  "networkx>=3.6.1",
  "pandas>=3.0.1",
  "plotly>=6.6.0",
  "scikit-learn>=1.8.0",
  "seaborn>=0.13.2",
  "sentence-transformers>=5.2.3",
]
dev = [
  "httpx>=0.28.1,<0.29.0",
  "ipykernel>=6.30.1,<7.0.0",
  "jupyter>=1.1.1,<2.0.0",
  "mkdocs-material>=9.6.19,<10.0.0",
  "mkdocs>=1.6.1,<2.0.0",
  "mkdocstrings[python]>=0.30.0,<0.31.0",
  "mongomock>=4.3.0,<5.0.0",
  "mypy>=1.17.1,<2.0.0",
  "pytest-cov>=7.0.0",
  "pytest>=8.4.1,<9.0.0",
  "ruff>=0.12.10,<0.13.0",
  "types-pyyaml>=6.0.12.20250822",
  "yamale>=6.0.0,<7.0.0",
]

# This allows you to defines "scripts" so that your package can install executables into the current
# python environment which will include the system PATH so they may be invoked from the command line.
# For example, "my-app-cli" = "my_app.main:main" below will allow a user to type my-app-cli" in the terminal
# after this package is pip installed, to invoke the main function in the my_app package.
[project.scripts]
dcs = "dcs_simulation_engine.cli.app:app"
# NOTE: dcs-analyze is an easy way to run analysis for now but should be replaced when e2e 
# CLI commands for engine management, fleet management, analysis, etc are decided
dcs-analyze = "analysis.auto.__main__:main"

[project.urls]
Homepage = "https://github.com/diverse-cognitive-systems-group/dcs-simulation-engine"
Issues = "https://github.com/diverse-cognitive-systems-group/dcs-simulation-engine/issues"

# Pytest configuration
# https://docs.pytest.org/en/stable/customize.html#pyproject-toml
[tool.pytest.ini_options]
addopts = [
  "--cache-clear",
  "--cov-report=term",
  "--numprocesses=auto", # multiprocessing
  "--cov-report=xml",
  "--durations=0",
  "--verbose",
  # "-x" # stop tests after first failure
]
filterwarnings = ["error"]
markers = [
  "unit: fast, isolated, no I/O",
  "functional: end-to-end flows with mocked LLM/DB",
  "compile: game config compilation tests",
  "slow: long-running tests",
  "infra: remote infrastructure tests",
]

[tool.isort]
combine_as_imports = true
line_length = 60
profile = "black"


[tool.ruff]
exclude = [
  "analysis/*", # analysis folder
  "**/*.ipynb", # all notebooks
]
line-length = 140
src = ["dcs_simulation_engine", "tests"]

[tool.ruff.lint]
exclude = [
  "*.ipynb",              # all notebooks
  "analysis_notebooks/*", # specific folder
]
select = [
  "D", # docstring rules
  "E", # pycodestyle rules
  "F", # pyflakes rules
  "I", # import rules
]

[tool.ruff.lint.isort]
case-sensitive = true
default-section = "first-party"


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
py-modules = ["__init__"]

[tool.setuptools.packages.find]
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#finding-simple-packages
include = ["dcs_simulation_engine*"]

[tool.setuptools.package-data]
"dcs_simulation_engine.deployments.templates" = ["*.j2"]

[dependency-groups]
dev = [
  "matplotlib>=3.10.8",
  "py-spy>=0.4.1",
  "pytest-xdist>=3.8.0",
  "seaborn>=0.13.2",
]
