[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61"]

[project]
authors = [{email = "dcs@psych.gatech.edu", name = "dcs"}]
dependencies = [
  "gradio>=6.0.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
]
description = "Gradio chat UI for the DCS simulation engine."
license = "MIT"
name = "dcs-ui"
requires-python = ">=3.11"
version = "0.1.0"

[project.scripts]
dcs-ui = "dcs_ui.app:main"

[tool.setuptools.packages.find]
include = ["dcs_ui*"]
